# DocSearch

./: .gitignore  README.md
backend/: .env.example  .pre-commit-config.yaml  .ruff.toml  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_documents.py  002_create_chunks.py
backend/src/: agent.py  main.py
backend/src/api/: documents.py  metrics.py  routing.py  skills.py
backend/src/core/: config.py  db.py  middleware.py
backend/src/ingestion/: celery_app.py  chunker.py  converter.py  embedder.py  pipeline.py
backend/src/models/: chunk.py  document.py  schemas.py
backend/src/retrieval/: context_expander.py  hybrid.py  keyword_search.py  reranker.py  vector_search.py
backend/src/skills/: cursor.py  grep_skill.py  query_skill.py  read_skill.py  routing_advisor.py
backend/src/storage/: cache.py  minio_client.py
backend/tests/integration/: test_ingestion_pipeline.py  test_query_skill.py  test_routing_advisor.py
docker/: docker-compose.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/ChunkViewer/: index.tsx
frontend/src/components/MainLayout/: index.tsx
frontend/src/services/: documentApi.ts  skillsApi.ts
specs/001-agent-doc-rag-retrieval/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-agent-doc-rag-retrieval/checklists/: requirements.md
specs/001-agent-doc-rag-retrieval/contracts/: grep-skill.md  query-skill.md  read-skill.md  routing-advisor.md
(+3 files in other folders)
