[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docsearch-backend"
version = "0.1.0"
description = "Agent 文档检索与 RAG 增强系统 - 后端服务"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Agent framework
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langserve>=0.3.0",
    # Document processing
    "docling>=2.0.0",
    # Embedding & reranking
    "sentence-transformers>=3.0.0",
    # Database
    "sqlalchemy>=2.0.0",
    "psycopg[binary,pool]>=3.2.0",
    "pgvector>=0.3.0",
    "alembic>=1.13.0",
    # Async task queue
    "celery[redis]>=5.4.0",
    # Object storage
    "minio>=7.2.0",
    # Cache
    "redis>=5.0.0",
    # Configuration
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    # Utilities
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "pre-commit>=3.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
